--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="mysql://root:1234@localhost:3306/foodorder"
+DATABASE_URL="mysql://root:QeXiVvvWEXRWAfCBYHmmkAcqmMpFFfFx@gondola.proxy.rlwy.net:15138/railway"
 PORT=5000
 CLIENT_URL=http://localhost:5173
 JWT_SECRET=change-me
